<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_account"
        android:title="@string/action_account"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>