<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.qhagoapp.ui.thruxion.ThruxionFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_thruxion" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.qhagoapp.ui.h2h.H2HFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_h2h" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.qhagoapp.ui.profile.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.qhagoapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>