<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_slideshow" />
        -->
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_arrow"
            android:title="@string/menu_webview" />
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/ic_justice"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/ic_currency"
            android:title="@string/menu_reflow" />
    </group>
</menu>